<resources>
    <string name="app_name">PernaVendas</string>
    <string name="title_activity_home">Vendas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_sucess">Login Realizado com Sucesso</string>
    <string name="login_error">Não foi Possível realizar o Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="perfil">Perfil</string>
    <string name="vender">Vender</string>
    <string name="nome_vazio">O Nome do Produto não pode estar vazio</string>
    <string name="nome_vazio_categoria">O Nome da Categoria não pode estar vazio</string>
    <string name="nome_vazio_marca">O Nome da Marca não pode estar vazio</string>
    <string name="propriedade_configuracao_vazio">O Campo Propriedade pode estar vazio</string>
    <string name="valor_configuracao_vazio">O Campo Valor não pode estar vazio</string>
    <string name="tipo_vazio">O Campo Tipo não pode estar vazio</string>
    <string name="error_operacao">Não foi possível completar a operação</string>
    <string name="save_success">Salvo com Sucesso</string>
    <string name="nome">Nome</string>
    <string name="quantidade">Quantidade</string>
    <string name="unidade_de_medida_ex_litros">Unidade De Medida (Ex. Litros)</string>
    <string name="processando">Processando...</string>
    <string name="aguarde">Aguarde...</string>
    <string name="concluido_sucesso">Operação Realizada com Sucesso</string>
    <string name="total_vazio">A Quantidade não pode ser vazia</string>
    <string name="categoria_ex_bebidas">Categoria (Ex. Bebidas)</string>
    <string name="configuracao">Configuração</string>
    <string name="propriedade">Propriedade</string>
    <string name="valor">Valor</string>
    <string name="nao_possivel_dados_solicitados">Não foi possível localizar os dados solicitados</string>
    <string name="descricao">Descrição</string>
    <string name="valor_venda">Valor Venda</string>
    <string name="ean">EAN</string>
    <string name="quantidade_min">Quantidade Mínima</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="valor_venda_vazio">O Campo Valor de Venda não pode ser vazio</string>
    <string name="descricao_vazio">O Campo Descrição não pode ser vazio</string>
    <string name="inativar">Desabilitar Produto</string>
    <string name="usuario_vazio">O nome do Usuário não pode estar vazio</string>
    <string name="senhas_nao_podem_ser_diferentes">As senhas não podem ser diferentes</string>
    <string name="desconto">Desconto</string>
    <string name="digite_o_produto">Digite o Nome do Produto</string>
    <string name="VENDA">VENDA</string>
    <string name="produto">Produto</string>
    <string name="valor_total">Valor Total</string>
    <string name="Vendas">Vendas</string>
    <string name="produtos">Produtos</string>
    <string name="id">ID</string>
    <string name="unidade_de_medida">Unidade De Medida</string>
    <string name="categoria">Categoria</string>
    <string name="nova_venda">NOVA VENDA</string>
    <string name="sem_pedidos">A venda necessita ter algum pedido</string>
    <string name="selecione_produto_primeiro">Selecione um produto primeiro</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_qr_reader">QrReaderActivity</string>
    <string name="nao_possivel_ler_codigo">Não foi possível ler o código</string>
    <string name="EAN">Código Produto</string>
    <string name="gerar_barcode">Gerar Código de Barras</string>
    <string name="preencher_codigo_produto">Código do Produto deve ser preenchido</string>
    <string name="Selecione">Selecione</string>
    <string name="QrCode">QrCode</string>
    <string name="confirmacao_senha">A Confirmação da senha deve ser igual a senha</string>
    <string name="logout">Logout</string>
    <string name="qtde">Qtde</string>
    <string name="data_venda">Data</string>
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="combo">Combo</string>
    <string name="total_itens">Total Itens</string>
    <string name="novo_combo">Novo Combo</string>
    <string name="preco_combo">Preço Combo</string>
    <string name="nome_combo">Nome do Combo</string>
    <string name="combos">Combos</string>
    <string name="codigo_produto">Código do Produto</string>
    <string name="codigo_ean_pai">Código do Produto Pai (Se existir)</string>
    <string name="qtde_sub">Qtde Sub Produto</string>
    <string name="um_sub_produto">É um Sub Produto?</string>
    <string name="se_sub_produto_deve_haver_ean_pai">Sub Produto deve conter Código do Produto Pai</string>
    <string name="nao_itens_exibicao">Não há itens para exibição</string>
    <string name="codigo_combo">Código do Combo</string>
    <string name="descricao_combo">Descrição Combo</string>
    <string name="nome_vazio_combo">O Nome do Combo não pode estar vazio</string>
    <string name="preco_vazio_combo">O Preço não pode estar vazio</string>
    <string name="senha_nao_vazia">A senha não pode estar vazia</string>
    <string name="apenas_administradores_editam">Apenas Administradores podem Editar ou Excluir Vendas</string>
    <string name="version">Version:</string>
    <string name="conexao_com_a_internet">Verifique sua conexão com a Internet</string>
    <string name="conexao_internet">Verifique sua conexão com a Internet</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="pedidos">Pedidos</string>
    <string name="aberto_em">Aberto Em</string>
    <string name="cliente">Cliente</string>
    <string name="pedidos_em_aberto">Pedidos Em Abertos</string>
    <string name="digite_nome_cliente">Digite o nome do Cliente</string>
    <string name="deve_haver_qtde">Qtde deve ser preenchido</string>
    <string name="configuracoes">Configurações</string>
    <string name="Perfil">Perfil</string>
    <string name="usuarios">Usuários</string>
    <string name="categorias">Categorias</string>
    <string name="marcas">Marcas</string>
    <string name="marca">Marca</string>
    <string name="unidades_de_medidas">Unidades de Medidas</string>
    <string name="Produtos">Produtos</string>
    <string name="cadastros">Cadastros</string>
    <string name="perna_vendas">PERNA VENDAS</string>
    <string name="produtos_acabando">Produtos estão acabando em seu Estoque</string>
</resources>
