<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/titulos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/pedidos_em_aberto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="0dp">

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/data_venda" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/valor_venda" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/desconto" />


            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qtde" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cliente" />

        </LinearLayout>

        <ListView
            android:id="@+id/lstVenda"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:padding="5dp" />

        <TextView
            style="@style/empty"
            android:text="@string/nao_itens_exibicao"
            android:id="@+id/txtEmpty"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNovaVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />

</FrameLayout>