<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            style="@style/titulos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/novo_combo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:gravity="center"
            android:orientation="horizontal">


            <AutoCompleteTextView
                android:id="@+id/inp_produto"
                style="@style/cadastros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/digite_o_produto"
                android:inputType="text"
                android:textSize="12dp"
                android:textStyle="bold" />


            <ImageButton
                android:id="@+id/imgLerQrCode"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/qr_code_reader" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#e6e6e6"
                android:gravity="center"
                android:orientation="horizontal">



                <EditText
                    android:id="@+id/inpNomeCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="@string/nome_combo"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/inpPrecoVenda"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:hint="@string/preco_combo"
                    android:inputType="numberDecimal" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#e6e6e6"
                android:gravity="center"
                android:orientation="horizontal">



                <EditText
                    android:id="@+id/inpDescricaoCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="@string/descricao_combo"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/inpEanCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:hint="@string/codigo_combo"
                    android:inputType="text" />





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#e6e6e6"
                android:gravity="center"
                android:orientation="horizontal">



                <Spinner
                    android:id="@+id/spnUnidadeDeMedidaCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:gravity="center"/>

                <Spinner
                    android:id="@+id/spnCategoriaCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:gravity="center" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/produto" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/marca" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/valor" />

            <TextView
                style="@style/item_list_view.titulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/ean" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <ListView
                android:id="@+id/lstProdutos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_save"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_save_black_24dp" />

    </LinearLayout>


</FrameLayout>