<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_nome_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_nome_produto"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/inp_nome_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_descricao_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_descricao_produto"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/inp_descricao_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_valor_venda_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_valor_venda_produto"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/inp_valor_venda_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_venda"
                android:inputType="numberDecimal" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_qtde_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_qtde_produto"
            android:layout_marginTop="10dp"
            android:hint="@string/quantidade">

            <EditText
                android:id="@+id/inp_qtde_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_qtde_min_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_qtde_min_produto"
            android:layout_marginTop="10dp"
            android:hint="@string/quantidade_min">

            <EditText
                android:id="@+id/inp_qtde_min_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_ean_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_ean_produto"
            android:layout_marginTop="10dp"
            android:hint="@string/EAN">

            <EditText
                android:id="@+id/inp_ean_produto"
                style="@style/cadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/spnMarca"
            style="@style/cadastros.spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"></Spinner>

        <Spinner
            android:id="@+id/spnUnidadeDeMedida"
            style="@style/cadastros.spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

        <Spinner
            android:id="@+id/spnCategoria"
            style="@style/cadastros.spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"></Spinner>

        <CheckBox
            android:id="@+id/chbIsSubProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/um_sub_produto" />

        <LinearLayout
            android:id="@+id/llSubProduto"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inp_layout_ean_pai_produto"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:layout_below="@id/inp_ean_pai_produto"
                android:layout_marginTop="10dp"
                android:hint="@string/codigo_ean_pai"
                android:visibility="visible">

                <EditText
                    android:id="@+id/inp_ean_pai_produto"
                    style="@style/cadastros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inp_layout_qtde_sub_produto"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_below="@id/inp_qte_sub_produto"
                android:layout_marginTop="10dp"
                android:hint="@string/qtde_sub"
                android:visibility="visible">

                <EditText
                    android:id="@+id/inp_qte_sub_produto"
                    style="@style/cadastros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkInativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inativar"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_save"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_black_24dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgQrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabGerarBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tooltipText="@string/gerar_barcode"
        app:srcCompat="@drawable/qr_code_reader" />

</FrameLayout>