<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
       style="@style/titulos"
        android:text="@string/VENDA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inp_layout_produto"
            android:layout_below="@id/inp_produto"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content">

            <EditText
                style="@style/cadastros"
                android:inputType="text"
                android:hint="@string/digite_o_produto"
                android:id="@+id/inp_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:src="@drawable/ic_save_black_24dp"
            android:id="@+id/imbAdicionarProduto"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.5">

        <TextView
            style="@style/item_list_view.titulos"
            android:text="@string/produto"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/item_list_view.titulos"
            android:text="Qtde"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/desconto"
            style="@style/item_list_view.titulos"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/valor_total"
            style="@style/item_list_view.titulos"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ListView
            android:id="@+id/lstPedidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

    </LinearLayout>

    <ImageButton
        android:src="@drawable/ic_save_black_24dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/imgSalvarVenda"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>